[tool.mypy]
strict_optional = false
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts= """
    --html=test_results/results.html \
    --self-contained-html \
    --junitxml=test_results/results.xml \
    --disable-warnings
"""
log_file_level="INFO"

[tool.ruff]

[tool.ruff.lint]
# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F", "PL", "YTT", "I"]
ignore = ["E501", "PLR2004"]

fixable = ["I"]

[tool.ruff.lint.pylint]
max-args = 10

[tool.isort]
profile = "black"

[tool.setuptools_scm]

[tool.poetry]
name = "turtle-api"
version = "0.1.0"
description = "An API to simulate the exciting (!) life of turtles."
authors = ["Ivan Lee <ivanklee86@gmail.com>"]
license = "MPLv2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
mypy = "^1.8.0"
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
pytest-flake8 = "^1.1.1"
pytest-html = "^4.0.0"
pytest-mock = "^3.10.0"
pytest-xdist = "^3.0.2"
pre-commit = "^3.4.0"
isort = "^5.13.1"
ruff = "^0.4.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
